--- a/.github/workflows/test-macos-github-actions.yml
+++ b/.github/workflows/test-macos-github-actions.yml
@@ -4,7 +4,7 @@ jobs:
   check-bats-version:
     runs-on: macos-10.15
     steps:
-      /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+      - run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '11.0'
