--- a/.github/workflows/test-macos-github-actions.yml
+++ b/.github/workflows/test-macos-github-actions.yml
@@ -1,13 +1,13 @@
 name: learn-github-actions
 on: [push]
 jobs:
-  check-bats-version:
+  setup-macos-build-environment:
     runs-on: macos-10.15
     steps:
       - run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '11.0'
+          xcode-version: '11.2.1'
       - run: xcodebuild -version
       #- uses: actions/checkout@v3
       #- uses: actions/setup-node@v3
