--- a/.github/workflows/test-macos-github-actions.yml
+++ b/.github/workflows/test-macos-github-actions.yml
@@ -4,11 +4,17 @@ jobs:
   setup-macos-build-environment:
     runs-on: macos-10.15
     steps:
-      - run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+      - uses: artemnovichkov/action-homebrew@0.1.0
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '11.2.1'
       - run: xcodebuild -version
+      - uses: jurplel/install-qt-action@v2.14.0
+        with:
+          dir: ${{ github.workspace }}/dev/ # optional
+          version: 6.2.4 # optional, default is 5.15.2
+          host: mac # optional
+          target: desktop # optional, default is desktop
       #- uses: actions/checkout@v3
       #- uses: actions/setup-node@v3
       #  with:
