--- a/.github/workflows/test-macos-github-actions.yml
+++ b/.github/workflows/test-macos-github-actions.yml
@@ -4,7 +4,8 @@ jobs:
   setup-macos-build-environment:
     runs-on: macos-10.15
     steps:
-      - uses: artemnovichkov/action-homebrew@0.1.0
+      #- run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+      - run: brew list
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '11.2.1'
