--- a/.github/workflows/test-macos-github-actions.yml
+++ b/.github/workflows/test-macos-github-actions.yml
@@ -11,9 +11,69 @@ jobs:
         with:
           xcode-version: '11.2.1'
       # setup opencv
-      - run: brew install opencv
-      - run: brew info gcc
-      - run: brew info openblas
+      - run: mkdir ${{ github.workspace }}/dev/
+      #- run: brew install opencv
+      - run: brew install pkg-config
+      - run: brew install ceres-solver
+      - run: brew install eigen
+      - run: brew install ffmpeg@4
+      - run: brew install glog
+      - run: brew install harfbuzz
+      - run: brew install numpy
+      - run: brew install protobuf
+      - run: brew install tbb
+      - run: brew install vtk
+      - run: cd ${{ github.workspace }}/dev/
+      - run: git clone https://github.com/xianyi/OpenBLAS.git
+      - run: cd ${{ github.workspace }}/dev/OpenBLAS
+      - run: make -j4
+      - run: make install
+      - run: mkdir ${{ github.workspace }}/dev/opencv
+      - run: cd ${{ github.workspace }}/dev/opencv
+      - run: git clone https://github.com/opencv/opencv.git
+      - run: git clone https://github.com/opencv/opencv_contrib.git
+      - run: mkdir build_opencv
+      - run: cd build_opencv
+      - run: opencv_cmake_args="-DCMAKE_OSX_DEPLOYMENT_TARGET=
+             -DBUILD_JASPER=OFF
+             -DBUILD_JPEG=OFF
+             -DBUILD_OPENEXR=OFF
+             -DBUILD_PERF_TESTS=OFF
+             -DBUILD_PNG=OFF
+             -DBUILD_PROTOBUF=OFF
+             -DBUILD_TESTS=OFF
+             -DBUILD_TIFF=OFF
+             -DBUILD_WEBP=OFF
+             -DBUILD_ZLIB=OFF
+             -DBUILD_opencv_hdf=OFF
+             -DBUILD_opencv_java=OFF
+             -DBUILD_opencv_text=ON
+             -DOPENCV_ENABLE_NONFREE=ON
+             -DOPENCV_EXTRA_MODULES_PATH=${{ github.workspace }}/dev/opencv/opencv_contrib/modules
+             -DOPENCV_GENERATE_PKGCONFIG=ON
+             -DPROTOBUF_UPDATE_FILES=ON
+             -DWITH_1394=OFF
+             -DWITH_CUDA=OFF
+             -DWITH_EIGEN=ON
+             -DWITH_FFMPEG=ON
+             -DWITH_GPHOTO2=OFF
+             -DWITH_GSTREAMER=OFF
+             -DWITH_JASPER=OFF
+             -DWITH_OPENEXR=ON
+             -DWITH_OPENGL=OFF
+             -DWITH_QT=OFF
+             -DWITH_TBB=ON
+             -DWITH_VTK=ON
+             -DBUILD_opencv_python2=OFF
+             -DBUILD_opencv_python3=ON
+             -DPYTHON3_EXECUTABLE=/usr/local/opt/python@3.9/bin/python3
+             -DENABLE_AVX=OFF
+             -DENABLE_AVX2=OFF
+             -DENABLE_SSE41=OFF
+             -DENABLE_SSE42=OFF"
+      - run: cmake ${opencv_cmake_args} ${{ github.workspace }}/dev/opencv/opencv
+      - run: make
+      - run: make install
       #- uses: Dovyski/setup-opencv-action@v1
       #  with:
       #    opencv-version: '4.5.5'
