--- a/.github/workflows/test-macos-github-actions.yml
+++ b/.github/workflows/test-macos-github-actions.yml
@@ -1,5 +1,8 @@
 name: learn-github-actions
-on: [push]
+on: 
+  push:
+    branches-ignore:
+      - 'main'
 jobs:
   setup-macos-build-environment:
     runs-on: macos-10.15
