--- a/.github/workflows/test-macos-github-actions.yml
+++ b/.github/workflows/test-macos-github-actions.yml
@@ -15,7 +15,7 @@ jobs:
           xcode-version: '11.2.1'
       - run: mkdir ${{ github.workspace }}/dev/
       - run: |
-          cd {{ github.workspace }}/dev/
+          cd ${{ github.workspace }}/dev/
           curl http://potrace.sourceforge.net/download/1.16/potrace-1.16.tar.gz -o potrace-1.16.tar.gz
           tar -xvf archive.tar.gz
           cd potrace-1.16
