--- a/.github/workflows/test-checkout-path.yml
+++ b/.github/workflows/test-checkout-path.yml
@@ -10,9 +10,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: src
-      - run:
-        ls -al ${{ github.worksapce }}
-      - run:
-        ls -al ~
-      - run:
-        ls -al .
+      - run: ls -al ${{ github.worksapce }}
+      - run: ls -al ~
+      - run: ls -al .
