--- a/.github/workflows/test-qt.yml
+++ b/.github/workflows/test-qt.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - 'qt'
 jobs:
-  setup-macos-build-environment:
+  test-build-qt-project:
     runs-on: macos-10.15
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +22,7 @@ jobs:
           target: desktop # optional, default is desktop
       - run: |
           brew install tree
-          tree ~/dev/Qt
+          tree ~/dev/
       - run: |
           tree ${{ github.workspace }}
           ~/dev/Qt/6.2.4/macos/bin/qmake ${{ github.workspace }}/Test_Workflow/test.pro -spec macx-clang CONFIG+=qtquickcompiler && make qmake_all
