--- a/.github/workflows/test-qt.yml
+++ b/.github/workflows/test-qt.yml
@@ -13,21 +13,24 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '11.2.1'
-      - run: mkdir dev
+      - run: mkdir $RUNNER_WORKSPACE/dev
       - uses: jurplel/install-qt-action@v2.14.0
         with:
-          dir: dev # optional
           version: 6.2.4 # optional, default is 5.15.2
           host: mac # optional
           target: desktop # optional, default is desktop
       - run: |
           brew install tree
-          tree dev/
-      - run: |
+          tree $RUNNER_WORKSPACE
           tree ${{ github.workspace }}
-          dev/Qt/6.2.4/macos/bin/qmake ${{ github.workspace }}/test/test.pro -spec macx-clang CONFIG+=qtquickcompiler && make qmake_all
-          mkdir ~/build/
-          make -j10 in ~/build/
+      - run: |
+          mkdir build
+          cd build
+          $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/qmake6 ${{ github.workspace }}/test/test.pro -spec macx-clang CONFIG+=qtquickcompiler
+      -run: |
+          cd build
+          make qmake_all
+          make -j10
       #- uses: actions/checkout@v3
       #- uses: actions/setup-node@v3
       #  with:
