--- a/.github/workflows/test-qt.yml
+++ b/.github/workflows/test-qt.yml
@@ -1,41 +1,50 @@
 name: test-qt-build
 
-on: push
+on:   
+  push:
+    branches:
+      - 'qt'
 
 jobs:
   test-build-qt-project:
     runs-on: macos-10.15
     steps:
       - uses: actions/checkout@v3
-      - uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '11.2.1'
-      - run: mkdir $RUNNER_WORKSPACE/dev
-      - run: brew install boost
-      - uses: jurplel/install-qt-action@v2.14.0
-        with:
-          version: 6.2.4 # optional, default is 5.15.2
-          host: mac # optional
-          target: desktop # optional, default is desktop
+      #- uses: maxim-lobanov/setup-xcode@v1
+      #  with:
+      #    xcode-version: '11.2.1'
+      #- run: mkdir $RUNNER_WORKSPACE/dev
+      #- run: brew install boost
+      #- uses: jurplel/install-qt-action@v2.14.0
+      #  with:
+      #    version: 6.2.4 # optional, default is 5.15.2
+      #    host: mac # optional
+      #    target: desktop # optional, default is desktop
+      - name: Install Qt 6.2.4
+        run: |
+          brew install p7zip
+          python3 -m pip install setuptools wheel
+          python3 -m pip install py7zr==0.16.1
+          python3 -m pip install aqtinstall==2.1.0
+          python3 -m aqt install 6.2.4 mac desktop -m qtserialport qtwebsockets debug_info -O ${{ github.workspace }}/Qt
       - run: |
           brew install tree
-          tree $RUNNER_WORKSPACE
           tree ${{ github.workspace }}
-      - run: |
-          mkdir build
-          cd build
-          $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/qmake6 ${{ github.workspace }}/test/test.pro -spec macx-clang CONFIG+=qtquickcompiler
-      - run: |
-          cd build
-          make qmake_all
-          make -j10
-      - run: |
-          cd build
-          $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/macdeployqt TestQt.app -dmg
-          tree .
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: build/TestQt.dmg
+      #- run: |
+      #    mkdir build
+      #    cd build
+      #    $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/qmake6 ${{ github.workspace }}/test/test.pro -spec macx-clang CONFIG+=qtquickcompiler
+      #- run: |
+      #    cd build
+      #    make qmake_all
+      #    make -j10
+      #- run: |
+      #    cd build
+      #    $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/macdeployqt TestQt.app -dmg
+      #    tree .
+      #- name: Release
+      #  uses: softprops/action-gh-release@v1
+      #  if: startsWith(github.ref, 'refs/tags/')
+      #  with:
+      #    files: build/TestQt.dmg
 
