--- a/.github/workflows/test-win64-github-actions.yml
+++ b/.github/workflows/test-win64-github-actions.yml
@@ -22,9 +22,9 @@ jobs:
       - run: choco install opencv
       - run: dir
       - run: |
-        $env:path
+          $env:path
       - shell: python
-        print("Hello world")
+        run: print("Hello world")
       - name: Build Potrace Library
         run: |
           choco install wget
