--- a/.github/workflows/test-macos-github-actions.yml
+++ b/.github/workflows/test-macos-github-actions.yml
@@ -13,8 +13,25 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '11.2.1'
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.9'
+          cache: 'pip'
+      
       - run: mkdir ~/dev/
+
       # Potrace library
+      - name: Restore Potrace cache
+        uses: actions/cache@v3
+        id: cache-potrace
+        with:
+          path: |
+            ~/dev/potrace-1.16
+            /usr/local/lib/libpotrace.a
+            /usr/local/lib/libpotrace.dylib
+            /usr/local/lib/libpotrace.la
+          key: potrace
+
       - run: |
           cd ~/dev/
           curl http://potrace.sourceforge.net/download/1.16/potrace-1.16.tar.gz -o potrace-1.16.tar.gz
@@ -36,7 +53,7 @@ jobs:
       - run: |
           cd ~/dev/
           ln -s /usr/local/Cellar/gcc/11.3.0/bin/gfortran /usr/local/bin/gfortran
-          git clone https://github.com/xianyi/OpenBLAS.git ~/dev/openBLAS
+          git clone https://github.com/xianyi/OpenBLAS.git
           cd OpenBLAS
           make -j4
           sudo make install
