--- a/.github/workflows/test-build-environment.yml
+++ b/.github/workflows/test-build-environment.yml
@@ -13,10 +13,6 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '11.2.1'
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.9'
-          cache: 'pip'
       - run: mkdir dev
       - run: |
           brew install tree
@@ -56,6 +52,7 @@ jobs:
 
       - name: Install Opencv dependencies
       # NOTE: brew installed opencv has some portability problem with brew installed openblas and gcc-11
+      # NOTE: boost is installed as dependencies of vtk
         run: | 
           brew install pkg-config
           brew install ceres-solver
@@ -67,7 +64,6 @@ jobs:
           brew install protobuf
           brew install tbb
           brew install vtk
-          # NOTE: boost is installed as dependencies of vtk
 
       # Build and Install OpenBLAS library
       - name: Restore OpenBLAS cache
@@ -76,7 +72,7 @@ jobs:
         with:
           path: |
             dev/OpenBLAS
-          key: ${{ runner.os }}-${{ hashFiles('**/dev/OpenBLAS') }}
+          key: ${{ runner.os }}-OpenBLAS
 
       - name: Build OpenBLAS (dependencies for OpenCV)
         if: steps.cache-openblas.outputs.cache-hit != 'true'
@@ -98,7 +94,7 @@ jobs:
         with:
           path: |
             dev/opencv
-          key: ${{ runner.os }}-${{ hashFiles('**/dev/opencv') }}
+          key: ${{ runner.os }}-OpenCV
       - name: Build OpenCV
         if: steps.cache-opencv.outputs.cache-hit != 'true'
         run: |
