--- a/.github/workflows/test-build-environment.yml
+++ b/.github/workflows/test-build-environment.yml
@@ -148,6 +148,6 @@ jobs:
       
       - name: Create Github Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        #if: startsWith(github.ref, 'refs/tags/')
         with:
           files: build/Swiftray.dmg
