--- a/.github/workflows/test-build-environment.yml
+++ b/.github/workflows/test-build-environment.yml
@@ -134,7 +134,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/qmake6 ${{ github.workspace }}/swiftray.pro -spec macx-clang CONFIG+=qtquickcompiler
+          $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/qmake6 ${{ github.workspace }}/test/test.pro -spec macx-clang CONFIG+=qtquickcompiler
       - name: Compile (Build) project
         run: |
           cd build
@@ -143,11 +143,11 @@ jobs:
       - name: Package built executable into dmg
         run: |
           cd build
-          $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/macdeployqt Swiftray.app -qmldir=${{ github.workspace }}/src/windows/qml -dmg -verbose=2
+          $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/macdeployqt TestQt.app -dmg -verbose=2
           tree .
       
       - name: Create Github Release
         uses: softprops/action-gh-release@v1
         #if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: build/Swiftray.dmg
+          files: build/TestQt.dmg
