--- a/.github/workflows/test-build-environment.yml
+++ b/.github/workflows/test-build-environment.yml
@@ -146,8 +146,8 @@ jobs:
           $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/macdeployqt TestQt.app -dmg -verbose=2
           tree .
       
-      - name: Create Github Release
-        uses: softprops/action-gh-release@v1
-        #if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: build/TestQt.dmg
+      #- name: Create Github Release
+      #  uses: softprops/action-gh-release@v1
+      #  #if: startsWith(github.ref, 'refs/tags/')
+      #  with:
+      #    files: build/TestQt.dmg
