--- a/.github/workflows/test-build-environment.yml
+++ b/.github/workflows/test-build-environment.yml
@@ -146,6 +146,7 @@ jobs:
           $RUNNER_WORKSPACE/Qt/6.2.4/macos/bin/macdeployqt TestQt.app -dmg -verbose=2
           tree .
       - run: brew list
+      - run: tree /usr/local/lib
       #- name: Create Github Release
       #  uses: softprops/action-gh-release@v1
       #  #if: startsWith(github.ref, 'refs/tags/')
