--- a/.github/workflows/test-build-environment-qt5.yml
+++ b/.github/workflows/test-build-environment-qt5.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Package built executable into dmg
         run: |
           cd build
-          $RUNNER_WORKSPACE/Qt/5.15.2/macos/bin/macdeployqt TestQt.app -dmg -verbose=2
+          $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/bin/macdeployqt TestQt.app -dmg -verbose=2
           tree .
       - run: brew list
       - run: tree /usr/local/lib
