--- a/.github/workflows/test-mingw64.yml
+++ b/.github/workflows/test-mingw64.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          export MINGW64_PATH=/mingw64
+          export MINGW64_PATH=${{ runner.temp }}/msys64/mingw64
           echo ${MINGW64_PATH}
           qmake.exe -o Makefile ../test/test.pro -spec win32-g++ "CONFIG+=qtquickcompiler"
           #mingw32-make -j4
