--- a/.github/workflows/test-mingw64.yml
+++ b/.github/workflows/test-mingw64.yml
@@ -38,6 +38,7 @@ jobs:
           cd build
           export MINGW64_PATH=${{ runner.temp }}/msys64/mingw64
           echo ${MINGW64_PATH}
+          export PATH="/mingw64/bin:/mingw64/lib:/mingw64/include:$PATH"
           qmake.exe -o Makefile ../test/test.pro -spec win32-g++ "CONFIG+=qtquickcompiler"
           #mingw32-make -j4
           make -j4
