--- a/.github/workflows/test-mingw64.yml
+++ b/.github/workflows/test-mingw64.yml
@@ -30,6 +30,9 @@ jobs:
           echo $PATH
           pwd
           ls /mingw64
+          ls /mingw64/lib
+          ls /mingw64/include/opencv4
+          ls /mingw64/include/opencv2
 
       - name: 
         shell: msys2 {0}
@@ -39,6 +42,7 @@ jobs:
           export MINGW64_PATH=${{ runner.temp }}/msys64/mingw64
           echo ${MINGW64_PATH}
           export PATH="/mingw64/bin:/mingw64/lib:/mingw64/include:$PATH"
+          echo $PATH
           qmake.exe -o Makefile ../test/test.pro -spec win32-g++ "CONFIG+=qtquickcompiler"
           #mingw32-make -j4
           make -j4
