--- a/.github/workflows/test-mingw64.yml
+++ b/.github/workflows/test-mingw64.yml
@@ -43,6 +43,7 @@ jobs:
           echo ${MINGW64_PATH}
           export PATH="/mingw64/bin:$PATH"
           echo $PATH
+          export LD_LIBRARY_PATH=/mingw64/lib
           qmake.exe -o Makefile ../test/test.pro -spec win32-g++ "CONFIG+=qtquickcompiler"
           #mingw32-make -j4
           make -j4
