--- a/.github/workflows/test-mingw64.yml
+++ b/.github/workflows/test-mingw64.yml
@@ -37,9 +37,8 @@ jobs:
           cd build
           export PATH="/mingw64/bin:$PATH"
           echo $PATH
-          #export MINGW64_PATH=${{ runner.temp }}/msys64/mingw64
-          #echo ${MINGW64_PATH}
-          #export LIBRARY_PATH=/mingw64/lib
+          export MINGW64_PATH=/mingw64
+          echo ${MINGW64_PATH}
           qmake.exe -o Makefile ../test/test.pro -spec win32-g++ "CONFIG+=qtquickcompiler"
           #mingw32-make -j4
           make -j4
